--- a/atwiki/package.json
+++ b/atwiki/package.json
@@ -9,9 +9,13 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.43",
     "@types/react": "^18.0.15",
+    "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.1",
+    "dayjs": "^1.11.5",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
