--- a/atwiki/package.json
+++ b/atwiki/package.json
@@ -13,8 +13,9 @@
     "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
-    "date-fns": "^2.29.1",
+    "date-fns": "^2.29.2",
     "dayjs": "^1.11.5",
+    "json-server": "^0.17.0",
     "promise-mysql": "^5.2.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
