--- a/atwiki/package.json
+++ b/atwiki/package.json
@@ -21,16 +21,18 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
     "react-scripts": "5.0.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node --loader ts-node/esm ./src/controller/user.ts",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy":"http://localhost:3001",
+  "proxy": "http://localhost:3001",
   "eslintConfig": {
     "extends": [
       "react-app",
