--- a/atwiki/package.json
+++ b/atwiki/package.json
@@ -7,12 +7,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/cors": "^2.8.12",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.43",
     "@types/react": "^18.0.15",
     "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.1",
     "dayjs": "^1.11.5",
     "promise-mysql": "^5.2.0",
@@ -27,7 +29,7 @@
   },
   "type": "module",
   "scripts": {
-    "start": "node --loader ts-node/esm ./src/controller/user.ts",
+    "start": "node --loader ts-node/esm ./src/controller/API.ts",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
