--- a/atwiki/package.json
+++ b/atwiki/package.json
@@ -11,11 +11,13 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.43",
     "@types/passport": "^1.0.11",
+    "@types/passport-local": "^1.0.34",
     "@types/react": "^18.0.15",
     "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "^18.0.6",
     "argon2": "^0.29.1",
     "axios": "^0.27.2",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "date-fns": "^2.29.1",
     "dayjs": "^1.11.5",
