--- a/atwiki/package.json
+++ b/atwiki/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/connect-flash": "^0.0.37",
     "@types/cors": "^2.8.12",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.43",
