--- a/atwiki/package.json
+++ b/atwiki/package.json
@@ -29,6 +29,7 @@
     "passport-local": "^1.0.0",
     "promise-mysql": "^5.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
