--- a/atwiki/package.json
+++ b/atwiki/package.json
@@ -10,7 +10,7 @@
     "@types/connect-flash": "^0.0.37",
     "@types/cors": "^2.8.12",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.43",
+    "@types/node": "^18.11.7",
     "@types/passport": "^1.0.11",
     "@types/passport-local": "^1.0.34",
     "@types/react": "^18.0.15",
@@ -25,6 +25,7 @@
     "dayjs": "^1.11.5",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "fs": "^0.0.1-security",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "promise-mysql": "^5.2.0",
