--- a/atwiki/package.json
+++ b/atwiki/package.json
@@ -34,6 +34,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
+    "react-hot-toast": "^2.4.0",
     "react-scripts": "5.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
