--- a/atwiki/package.json
+++ b/atwiki/package.json
@@ -9,7 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/connect-flash": "^0.0.37",
     "@types/cors": "^2.8.12",
-    "@types/jest": "^27.5.2",
+    "@types/jest": "^29.2.2",
     "@types/node": "^16.11.43",
     "@types/passport": "^1.0.11",
     "@types/passport-local": "^1.0.34",
@@ -69,8 +69,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/express-session": "^1.17.5",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.3.1",
     "joi": "^17.6.0",
     "prisma": "^4.2.1",
-    "react-router-dom": "^6.4.0"
+    "react-router-dom": "^6.4.0",
+    "supertest": "^6.3.1",
+    "ts-jest": "^29.0.3"
   }
 }
