--- a/atwiki/package.json
+++ b/atwiki/package.json
@@ -84,6 +84,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/express-session": "^1.17.5",
     "@types/supertest": "^2.0.12",
+    "helmet": "^6.0.1",
     "jest": "^29.3.1",
     "joi": "^17.6.0",
     "prisma": "^4.2.1",
