--- a/atwiki/package.json
+++ b/atwiki/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "dependencies": {
     "@prisma/client": "4.2.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/connect-flash": "^0.0.37",
     "@types/cors": "^2.8.12",
-    "@types/jest": "^27.5.2",
+    "@types/jest": "^29.2.3",
     "@types/node": "^18.11.7",
     "@types/passport": "^1.0.11",
     "@types/passport-local": "^1.0.34",
@@ -26,6 +26,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
+    "json-server": "^0.17.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "promise-mysql": "^5.2.0",
@@ -45,7 +46,8 @@
     "start": "node --loader ts-node/esm ./src/routes/index.ts",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "json-server": "json-server db-test.json --port 3100"
   },
   "proxy": "http://localhost:3001",
   "eslintConfig": {
