--- a/atwiki/.env
+++ b/atwiki/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:Kisaragi11010!@localhost:3306/kangi_db"
+DATABASE_URL="mysql://root:password@mysql-container:3306/kangi_db"
