--- a/atwiki/package.json
+++ b/atwiki/package.json
@@ -47,7 +47,7 @@
     "test": "jest",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "http://express-container:3001",
   "eslintConfig": {
     "extends": [
       "react-app",
