--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     ports:
       - 80:3001 # 公開ポート番号:environmentで指定したポート番号
     working_dir: /usr/src/atwiki
-    command: sh -c "yarn install && yarn run prisma migrate deploy && node app.js"
+    command: sh -c "yarn install && yarn run prisma migrate deploy && yarn run start"
 
   mysql:
     build: ./docker/db/  # Dockerfileの親フォルダパス
