--- a/atwiki/.env
+++ b/atwiki/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:password@mysql-container:3306/kangi_db"
+INLINE_RUNTIME_CHUNK=false
