#40 docker-composeをdocker composeに変更

--- a/atwiki/.env
+++ b/atwiki/.env
@@ -6,3 +6,8 @@
 
 DATABASE_URL="mysql://root:password@mysql-container:3306/kangi_db"
 INLINE_RUNTIME_CHUNK=false
+MYSQL_USER=user
+MYSQL_HOST=kangi_db
+MYSQL_PASSWORD=password 
+MYSQL_ROOT_PASSWORD=password
+MYSQL_DATABASE=kangi_db
