--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,20 +5,17 @@ services:
     build: ./docker/db/  # Dockerfileの親フォルダパス
     container_name: mysql-container  # コンテナ名
     hostname: mysql-server  # ホスト名
-    healthcheck:
-      test: "curl -f http://localhost:3306 || exit 1"
-      interval: 5s
-      timeout: 5s
-      retries: 5
     command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
     volumes:
       - mysql-data:/var/lib/mysql  # volumeのエントリポイント
       - ./docker/db/conf.d:/etc/mysql/conf.d # cnfファイル
       - ./docker/db/sql/create_db.sql:/docker-entrypoint-initdb.d/create_db.sql # 起動時に実行するsqlファイル
     environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: kangi_db
-      TZ: Japan
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_HOST=${MYSQL_HOST}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - TZ=Japan
     ports:
       - 3306:3306  # 公開ポート番号:3306(デフォルト値）
     restart: always
@@ -33,12 +30,21 @@ services:
     tty: true
     environment:
       - NODE_ENV=PRODUCTION # 本番用設定
-      - PORT=3001  # コンテナ内でのポート番号
+      - SERVER_PORT=${SERVER_PORT}
+      - MYSQL_HOST=${MYSQL_HOST}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
     volumes:
       - ./atwiki:/usr/src/atwiki
       - express-data:/usr/src/atwiki/node_modules # volumeのエントリポイント => 高速化
+      - ./scripts:/usr/src/scripts
     ports:
       - 3001:3001 # 公開ポート番号:environmentで指定したポート番号
+    working_dir: /usr/src/scripts
+    command: ["sh", "./run_prod.sh"]
+
+
 
 volumes:
   mysql-data:
