--- a/atwiki/.env
+++ b/atwiki/.env
@@ -4,10 +4,10 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:password@mysql-container:3306/kangi_db"
+DATABASE_URL="mysql://root:password@atwiki-mysql-container:3306/kangi_db"
 INLINE_RUNTIME_CHUNK=false
 MYSQL_USER=user
 MYSQL_HOST=kangi_db
-MYSQL_PASSWORD=password 
+MYSQL_PASSWORD=password
 MYSQL_ROOT_PASSWORD=password
 MYSQL_DATABASE=kangi_db
